--- a/TinyProjects/Team4/package.json
+++ b/TinyProjects/Team4/package.json
@@ -17,6 +17,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-intersection-observer": "^9.1.0",
+    "react-p5-wrapper": "^3.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
