--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "framer-motion": "^6.3.3"
+    "framer-motion": "^6.3.3",
+    "styled-components": "^5.3.5"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.25"
   }
 }
