--- a/PetitProjects/Team2/package.json
+++ b/PetitProjects/Team2/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "framer-motion": "^6.3.11",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/styled-components": "^5.1.25"
   }
 }
