--- a/PetitProjects/Team2/package.json
+++ b/PetitProjects/Team2/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "framer-motion": "^6.3.11",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "npm": "^8.12.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
@@ -45,6 +48,8 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
-    "@types/styled-components": "^5.1.25"
+    "@types/smooth-scroll": "^16.1.1",
+    "@types/styled-components": "^5.1.25",
+    "smooth-scroll": "^16.1.3"
   }
 }
