--- a/PetitProjects/Team3/package.json
+++ b/PetitProjects/Team3/package.json
@@ -30,6 +30,7 @@
     "@storybook/react": "^6.5.7",
     "@storybook/testing-library": "^0.0.11",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.0",
     "@types/animejs": "^3.1.4",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
