--- a/PetitProjects/Team1/package.json
+++ b/PetitProjects/Team1/package.json
@@ -8,6 +8,7 @@
     "@types/react-dom": "^18.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-intersection-observer": "^9.3.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3"
   },
