--- a/PetitProjects/Team1/.eslintrc.json
+++ b/PetitProjects/Team1/.eslintrc.json
@@ -1,50 +1,45 @@
 {
-    "env": {
-      "browser": true,
-      "node": true,
-      "es2021": true
+  "env": {
+    "browser": true,
+    "node": true,
+    "es2021": true
+  },
+  "ignorePatterns": ["node_modules/", "src/"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "prettier", "plugin:prettier/recommended"],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "ignorePatterns": ["node_modules/"],
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/eslint-recommended",
-      "prettier",
-      "plugin:prettier/recommended"
-    ],
-    "globals": {
-      "Atomics": "readonly",
-      "SharedArrayBuffer": "readonly"
-    },
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      },
-      "ecmaVersion": 12,
-      "sourceType": "module"
-    },
-    "plugins": ["react", "@typescript-eslint", "prettier"],
-    "settings": {
-      "import/resolver": {
-        "node": {
-          "extensions": [".js", ".jsx", ".ts", ".tsx"]
-        }
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["react", "@typescript-eslint", "prettier"],
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
-    },
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-            "endOfLine": "auto"
-        }
-      ],
-      "linebreak-style": 0,
-      "no-case-declarations": 0,
-      "no-use-before-define": "off",
-      "import/prefer-default-export": "off",
-      "import/no-unresolved": "off",
-      "@typescript-eslint/no-use-before-define": ["error"],
-      "import/extensions": "off",
-      "no-alert": "off"
     }
+  },
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "linebreak-style": 0,
+    "no-case-declarations": 0,
+    "no-use-before-define": "off",
+    "import/prefer-default-export": "off",
+    "import/no-unresolved": "off",
+    "@typescript-eslint/no-use-before-define": ["error"],
+    "import/extensions": "off",
+    "no-alert": "off"
   }
+}
